# uestcradar

./: .gitignore  LICENSE  README.md  lfm_tx.m  波位格式.txt  波位格式_128同向.txt
.agents/skills/cpp_algorithm_ops/: Dockerfile.build  SKILL.md  env.template
.agents/skills/cpp_algorithm_ops/references/: phase1-environment.md  phase2-compilation.md  phase3-testing-shield.md  phase3_5-topology-check.md  phase4-distribution.md  workflow.md
.agents/skills/cpp_algorithm_ops/scripts/: build.sh  deploy.sh  deploy_to.sh  test.sh
.agents/skills/develop_cpp_algorithm/: Dockerfile  Dockerfile.build_cross  SKILL.md
.agents/skills/develop_cpp_algorithm/algorithm_template/: CMakeLists.txt  Dockerfile.build_cross  README.md
.agents/skills/develop_cpp_algorithm/algorithm_template/include/: data.h
.agents/skills/develop_cpp_algorithm/algorithm_template/sdk/include/: cycore_algorithm_sdk.h
.agents/skills/develop_cpp_algorithm/algorithm_template/sdk/include/common/: i_data_stream.h  i_execution_context.h  i_probe.h  span.h  stream_types.h
.agents/skills/develop_cpp_algorithm/algorithm_template/sdk/include/flowgraph/: block_wrapper.h  buffer.h  data_type_traits.h  probe.h  value.h
.agents/skills/develop_cpp_algorithm/algorithm_template/src/: algorithm_block.cpp
.agents/skills/develop_cpp_algorithm/references/: algorithm-implementation.md  compilation-guide.md  data-format-specification.md  deployment-guide.md  template-structure.md
.codex/skills/matlab-helium-docs/agents/: openai.yaml
Matlab_Helium/: README.md
Matlab_Helium/.codex/skills/matlab-helium-docs/: SKILL.md
Matlab_Helium/apps/: run_batch_pipeline.m
Matlab_Helium/docs/: usage_guide.md
Matlab_Helium/src/: align_direct_wave_range.m  batch_parse_bin.m  cfar_2d.m  mono_angle.m  preprocess.m  process_rd.m  radar_plot.m
Matlab_Helium/temp_gui/: run_gui.m
Matlab_Helium/temp_gui/callbacks/: cb_play_step.m  cb_save_gif.m  cb_show_frame.m
algorithm/: calibrate_range_zero.m  doppler_fft.m  mti_avg.m  read_cs16_channel_file.m  read_json_file.m
algorithm_template/: README.md
apps/: run_batch_pipeline.m
cpp/: CMakeLists.txt
cpp/cfar_plotter/: CMakeLists.txt
cpp/cfar_plotter/include/: cfar_plotter_algorithm.h  data.h
cpp/cfar_plotter/src/: algorithm.cpp
cpp/cfar_plotter/test/: qa_cfar_kalman_rawbytes_contract.cpp  qa_cfar_plotter_block.cpp
cpp/fft/: CMakeLists.txt
cpp/fft/include/: data.h
cpp/fft/src/: fft_block.cpp
cpp/fft_plugin/: CMakeLists.txt  fft_block.cpp  fft_plugin.cpp
cpp/fft_plugin/include/flowgraph/blocks/common/: fft_block.h
cpp/ifft/: CMakeLists.txt
cpp/ifft/src/: ifft_block.cpp
cpp/kalman_tracker/: CMakeLists.txt
cpp/kalman_tracker/include/: data.h  kalman_tracker_algorithm.h
cpp/kalman_tracker/src/: algorithm.cpp
cpp/kalman_tracker/test/: qa_kalman_tracker_block.cpp
cpp/pulse_compression/: CMakeLists.txt  README.md
cpp/pulse_compression/include/: data.h  pulse_compression_algorithm.h
cpp/pulse_compression/src/: algorithm.cpp
cpp/pulse_compression/test/: qa_pulse_compression_block.cpp
cpp/range_doppler/: CMakeLists.txt
cpp/range_doppler/include/: data.h  range_doppler_algorithm.h
cpp/range_doppler/src/: algorithm.cpp
cpp/range_doppler/test/: bm_radar_cascade_pipeline.cpp  qa_radar_cascade_pipeline.cpp  qa_range_doppler_block.cpp
cpp/sdk/include/common/: data_types.h
cpp/sdk/include/flowgraph/: block.h  block_model.h  circular_buffer.h  dynamic_port.h  graph.h  lifecycle.h  plugin.h  plugin_loader.h  port.h  registry.h  scheduler.h  span.h
docs/: usage_guide.md
matlab/: parse_bin.m  parse_capture.m  radar_gui.m  test_calibrate_zero.m
matlab/algorithm/: cfar_detector.m  make_hann_window.m  mti_two_pulse.m  process_one_window.m  pulse_compression.m  read_contiguous_pri_block.m
src/: align_direct_wave_range.m  dbscan_cluster.m  fuse_beam_plots.m  mono_angle.m  parse_beam_schedule.m  process_rd.m  process_rd_beam.m  radar_plot.m  track_init.m  tracker_3D_EKF.m
temp_gui/: local_check_run_batch_pipeline.m
temp_gui/callbacks/: cb_run.m
